# mpris-lyrics-rs

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: architecture.md
src/: app.rs  display.rs  lib.rs  main.rs  mpris.rs  utils.rs
src/api/: mod.rs  netease.rs  qq.rs
src/app/: core.rs  mod.rs
src/config/: loader.rs  mod.rs
src/display/: formatter.rs  manager.rs  mod.rs  renderer.rs
src/events/: mod.rs
src/lyrics/: manager.rs  mod.rs
src/lyrics/providers/: local.rs  mod.rs  netease.rs  qqmusic.rs
src/mpris/: events.rs  listener.rs  mod.rs  player.rs  registry.rs  types.rs
src/player/: manager.rs  mod.rs
src/policy/: mod.rs
src/state/: mod.rs
src/tui/: app.rs  events.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: lyrics_panel.rs  mod.rs  player_info.rs  progress_bar.rs  status_bar.rs
src/ui/: common.rs  mod.rs  simple.rs  tui.rs
src/utils/: lrc.rs  mod.rs  string.rs
