[package]
name = "mpris-lyrics-rs"
version = "0.1.0"
edition = "2021"
authors = ["Contributor"]
description = "A lyrics display program for Linux that synchronizes with music players via MPRIS"

[dependencies]
# MPRIS & D-Bus 相关
mpris = "2.0.1"
dbus = "0.9.9"

# 异步运行时
tokio = { version = "1.48.0", features = ["full"] }

# 网络请求
reqwest = { version = "0.12.24", features = ["json"] }

# 序列化/反序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# 配置文件处理
toml = "0.9.8"

# 错误处理
anyhow = "1.0.100"
thiserror = "2.0.17"

# 日志
log = "0.4.28"
env_logger = "0.11.8"

# TUI 界面
ratatui = "0.29.0"
crossterm = "0.29.0"

# 终端输出美化（保留用于简单输出模式）
colored = "3.0.0"

# 时间处理
chrono = "0.4.42"

# 正则表达式
regex = "1.12.2"

# 文件系统
dirs = "6.0.0"
clap = { version = "4.5.53", features = ["derive"] }

# 加密相关（网易云音乐API）
base64 = "0.22.1"
openssl = "0.10.75"
rand = "0.9.2"
hex = "0.4.3"
async-trait = "0.1.89"

[profile.release]
opt-level = 3
strip = true
lto = "thin"
codegen-units = 1
