[package]
name = "mpris-lyrics-rs"
version = "0.1.0"
edition = "2021"
authors = ["Contributor"]
description = "A lyrics display program for Linux that synchronizes with music players via MPRIS"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }

# D-Bus
zbus = { version = "4", features = ["tokio"] }

# HTTP
reqwest = { version = "0.12.24", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Errors
anyhow = "1.0.100"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UI
ratatui = "0.29.0"
crossterm = "0.29.0"

# Misc
dirs = "6.0.0"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3"

# Lyrics and matching
strsim = "0.11"
lrc = "0.1"

# NetEase encryption
base64 = "0.22.1"
openssl = "0.10.75"
rand = "0.9.2"
hex = "0.4.3"
async-trait = "0.1.89"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
